--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.5.1",
     "typescript": "~4.5.4",
     "vite": "^2.7.13",
+    "vite-plugin-pwa": "^0.11.13",
     "vue-tsc": "^0.29.8"
   }
 }
